src/assets/scss/style.scss
@use 'helpers/reset';
@use 'helpers/transitions';

@use 'About';
@use 'Books';
@use 'Button';
@use 'Channels';
@use 'Clippings';
@use 'Collaborate';
@use 'Navigation';
@use 'Notification';
@use 'Pages';
@use 'Snippets';
@use 'Spinner';
@use 'Tooltip';

* {
  box-sizing: border-box;
}

html, body {
  height: 100%;
}

:root {
    --sans-font: -apple-system, BlinkMacSystemFont, "avenir next", avenir,
    helvetica, "helvetica neue", ubuntu, roboto, noto, "segoe ui", arial,
    sans-serif;
}

body {
  font-size: 1.1em;
  line-height: 135%;
  font-weight: normal;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  color: #000;
  font-family:var(--sans-font);
  margin: 0;
  padding: 0;
  background: #ffd951;
  transition: background 250ms ease-in-out;
  background: linear-gradient(125deg, #ffd951 0%, #51ffaf 20%);
  background-repeat: repeat;
  background-position: 0 0;
  background-size: 400% 400%;
}

a {
  color: #000;
  text-decoration: underline;
}

strong {
  font-weight: bold;
}

.code {
  background: #f0f0f0;
  border-radius: 2px;
  padding: 2px 4px;
  font-size: 0.8em;
  line-height: 135%;
  font-weight: normal;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  color: #000;
  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
}

em {
  font-style: italic;
}

p {
  line-height: 135%;
  margin: 0 0 1em;
}

p:last-child {
  margin: 0;
}

p.is-small {
  font-size: .8em;
  color: #999;
}

p.is-small a {
  color: #999;
}

body.block-scroll {
  overflow: hidden;
}

body.is-dragover .Books__infoInner {
  background: rgba(#000, 0.1);
}

.App {
  height: 100%;
}

.Home {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
}

.Backdrop {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0,0,0, 0.4);
  transition: all 250ms ease-in-out;
  z-index: 100;
}

.Title {
  position: fixed;
  top: 2em;
  left: 0;
  text-align: center;
  font-weight: bold;
  width: 100%;
  font-size: 1.4em;
  z-index: 1;
}

.is-0 .Spine { border-color: #F2994A; } 
.is-1 .Spine { border-color: #6FCF97; } 
.is-2 .Spine { border-color: #27AE60; } 
.is-3 .Spine { border-color: #2F80ED; } 
.is-4 .Spine { border-color: #2D9CDB; } 
.is-5 .Spine { border-color: #56CCF2; } 
.is-6 .Spine { border-color: #EB5757; } 
.is-7 .Spine { border-color: #BB6BD9; } 
.is-8 .Spine { border-color: #9B51E0; } 
.is-9 .Spine { border-color: #F2C94C; } 
.is-10 .Spine { border-color: #FFEB3B; } 
.is-11 .Spine { border-color: #000000; } 

.Icon {
  width: 20px;
}

